--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Video Storyboarding with Smartdown/Impress</title>
+  <title>Developing the First Smartdown Video</title>
   <meta
     name="description"
     content="Video Storyboarding with Smartdown/Impress"
@@ -37,7 +37,7 @@
     rel="stylesheet">
 
   <script>
-    window.SmartdownFirstVideoVersion = '0.0.2';
+    window.SmartdownFirstVideoVersion = '0.0.3';
   </script>
 
   <style>
@@ -98,13 +98,21 @@
 
     <h3>
       <a
-        href="storyboard/pages.html"
+        href="storyboard/?flatten=vertical"
         target="_blank"
         rel="noopener noreferrer">
-        View as Pages
+        View as Flattened Slides (Vertical)
       </a>
     </h3>
 
+    <h3>
+      <a
+        href="storyboard/?flatten=horizontal"
+        target="_blank"
+        rel="noopener noreferrer">
+        View as Flattened Slides (Horizontal)
+      </a>
+    </h3>
 
     <h2>Draft Video(s)</h2>
 
