--- a/site/storyboard/index.html
+++ b/site/storyboard/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Basic Smartdown and impress.js Example</title>
+  <title>Storyboard with Smartdown/Impress</title>
   <meta
     name="description"
-    content="Authoring impress.js presentations using Smartdown"
+    content="Storyboard with Smartdown/Impress"
   />
   <meta
     name="author"
@@ -67,7 +67,9 @@
 
 </head>
 
-<body class="impress-not-supported smartdown-outer-container smartdown-theme-blog">
+<body
+  id="smartdown-outer-container"
+  class="impress-not-supported smartdown-outer-container smartdown-theme-blog">
   <script
     src="../js/impress.js">
   </script>
@@ -92,8 +94,7 @@
   <div id="impress-help"></div>
 
   <div class="fallback-message">
-    <p>Your browser <b>doesn't support the features required</b> by impress.js, so you are presented with a simplified version of this presentation.</p>
-    <p>For the best experience please use the latest <b>Chrome</b>, <b>Safari</b> or <b>Firefox</b> browser.</p>
+    <h2>Please wait while your presentation loads…</h2>
   </div>
 
   <script src="../js/smartdown_impress.js"></script>
