--- a/site/index.html
+++ b/site/index.html
@@ -114,7 +114,13 @@
       </a>
     </h3>
 
+    <h2>
+      <a href="scripts/">Draft Scripts/Narratives</a>
+    </h2>
+
     <h2>Draft Video(s)</h2>
+
+    <h6>This is mostly a placeholder video until we have an actual draft</h6>
 
     <h3>Eugene Web Devs Presentation - June 29, 2017</h3>
     <p>
